# pure-txt-search

./: deafult.nix  default.nix  pure-txt-search.cabal
src/Pure/Data/Txt/: Search.hs
