name:                pure-txt-search
version:             0.7.0.0
synopsis:            Generic txt-oriented search classes.
homepage:            github.com/grumply/pure-txt-search
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-core >= 0.7 && < 1,
    pure-default >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    containers,
    bytestring,
    text

  exposed-modules:
    Pure.Data.Txt.Search

  hs-source-dirs: src

  default-language: Haskell2010

