name:                pure-txt-search
version:             0.8.0.0
synopsis:            Generic txt-oriented search classes.
homepage:            purehs.org/doc/pure-txt-search
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-txt-search.git

library
  build-depends:
    base,
    pure-core,
    pure-default,
    pure-lifted,
    pure-txt,
    containers,
    bytestring,
    text

  exposed-modules:
    Pure.Data.Txt.Search

  hs-source-dirs: src

  default-language: Haskell2010

